frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: mahadmansoor750/pdf-editor-frontend:latest
          ports:
            - containerPort: 3000
          # This section also pulls in the variables from your ConfigMap
